<resources>
    <string name="app_name">Teleappsistencia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="api_base_url">http://10.0.2.2:8000/</string>
    <string name="bearer">Bearer </string>
    <string name="menu_usuarios">Usuarios</string>
    <string name="menu_persona">Persona</string>
    <string name="menu_direccion">Dirección</string>
    <string name="menu_grupos">Grupos</string>
    <string name="menu_dispositivos_auxiliares_terminal">Dispositivos auxiliares en terminal</string>
    <string name="menu_tipo_vivienda">Tipo de vivienda</string>
    <string name="menu_tipo_situacion">Tipo de situación</string>
    <string name="menu_historico_tipo_situacion">Histórico tipo de situación</string>
    <string name="menu_tipo_alarma">Tipo Alarma</string>
    <string name="menu_clasificacion_alarma">Clasificación Alarma</string>
    <string name="menu_alarma">Alarma</string>
    <string name="menu_centro_sanitario_en_alarma">Centro Sanitario en Alarma</string>
    <string name="menu_recursos_comunitarios_en_alarma">Recursos Comunitarios en Alarma</string>
    <string name="menu_persona_de_contacto_en_alarma">Persona de contacto en Alarma</string>
    <string name="insertar">Insertar</string>
    <string name="listar">Listar</string>
    <string name="nombreUsuario">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="email">Email</string>
    <string name="sexo">Sexo</string>
    <string name="sexo_masculino">Hombre</string>
    <string name="sexo_femenimo">Mujer</string>
    <string name="id_direccion">ID de la dirección</string>
    <string name="id_historicoTipoSituacion">ID del histórico tipo de situación</string>
    <string name="id_terminal">ID Terminal</string>
    <string name="id_tipoSituacion">ID del tipo de situación</string>
    <string name="id_dispositivoAuxiliar">ID del dispositivo auxiliar en terminal</string>
    <string name="id_tipoAlarma">ID del tipo de alarma</string>
    <string name="numeroTerminal">Número del terminal</string>
    <string name="grupo">Grupo</string>
    <string name="textview_nombre_usuario_obligatorio">El nombre de usuario es obligatorio.</string>
    <string name="textview_password_obligatoria">La contraseña es obligatoria.</string>
    <string name="textview_nombre_obligatorio">El nombre es obligatorio</string>
    <string name="textview_apellidos_obligatorios">Los apellidos son obligatorios</string>
    <string name="textview_email_obligatorio">El email es obligatorio</string>
    <string name="textview_fecha_obligatoria">La fecha es obligatoria</string>
    <string name="textview_localidad_obligatoria">La localidad es obligatoria</string>
    <string name="textview_provincia_obligatoria">La provincia es obligatoria</string>
    <string name="textview_direccion_obligatoria">La dirección es obligatoria</string>
    <string name="textview_codigoPostal_obligatoria">El código postal es obligatorio</string>
    <string name="textview_dni_obligatorio">El DNI es obligatorio</string>
    <string name="textview_dni_no_valido">El DNI no es válido</string>
    <string name="textview_fechaNacimiento_obligatorio">La fecha de nacimiento es obligatoria</string>
    <string name="textview_telefonoFijo_obligatorio">El teléfono fijo es obligatorio</string>
    <string name="textview_telefonoFijo_error_longitud">El teléfono fijo debe tener 9 dígitos</string>
    <string name="textview_telefonoFijo_error_caracter">El teléfono fijo solo puede tener dígitos</string>
    <string name="textview_telefonoMovil_obligatorio">El teléfono móvil es obligatorio</string>
    <string name="textview_telefonoMovil_error_longitud">El teléfono móvil debe tener 9 dígitos</string>
    <string name="textview_telefonoMovil_error_caracter">El teléfono móvil solo puede tener dígitos</string>
    <string name="textview_longitud_minima_nombre_usuario">El nombre de usuario debe tener al menos 4 caracteres.</string>
    <string name="titulo_listar_tipoVivienda">Tipos de vivienda</string>
    <string name="titulo_listar_tipoSituacion">Tipos de Situaciones</string>
    <string name="titulo_listar_usuario">Usuarios del sistema</string>
    <string name="titulo_listar_persona">Personas</string>
    <string name="titulo_listar_historicoTipoSituacion">Histórico tipos de situaciones</string>
    <string name="titulo_listar_grupo">Grupos en el sistema</string>
    <string name="titulo_listar_dispositivoAux">Dispositivos auxiliares en terminal</string>
    <string name="titulo_listar_direccion">Direcciones</string>
    <string name="titulo_insertar_tipoVivienda">Crear nuevo tipo de vivienda</string>
    <string name="titulo_modificar_tipoVivienda">Modificar datos tipo vivienda</string>
    <string name="titulo_insertar_tipoSituacion">Crear nuevo tipo de situación</string>
    <string name="titulo_modificar_tipoSituacion">Modificar datos tipo situacion</string>
    <string name="titulo_insertar_usuarios">Crear nuevo usuario</string>
    <string name="titulo_modificar_usuarios">Modificar datos usuario</string>
    <string name="grupos_usuarios">Grupos</string>
    <string name="titulo_insertar_personas">Crear nueva persona</string>
    <string name="dni_persona">DNI</string>
    <string name="fechaNacimiento_persona">Fecha de nacimiento</string>
    <string name="telefonoFijo_persona">Teléfono fijo</string>
    <string name="telefonoMovil_persona">Teléfono móvil</string>
    <string name="titulo_modificar_personas">Modificar datos persona</string>
    <string name="fecha_historicoTipoSituacion">Fecha</string>
    <string name="titulo_insertar_historicoTipoSituacion">Crear nuevo histórico tipo de situación</string>
    <string name="titulo_modificar_historicoTipoSituacion">Modificar datos histórica tipo de situación</string>
    <string name="terminal_historicoTipoSituacion">Terminal</string>
    <string name="tipoSituacion_historicoTipoSituacion">Terminal</string>
    <string name="titulo_insertar_grupo">Crear nuevo grupo</string>
    <string name="titulo_modificar_grupo">Modificar datos grupo</string>
    <string name="titulo_insertar_dispositivosAux">Crear nuevo dispositivo auxiliar en terminal</string>
    <string name="titulo_modificar_dispositivosAux">Modificar datos dispositivos auxiliares en terminal</string>
    <string name="titulo_insertar_direccion">Crear nueva dirección</string>
    <string name="localidad_direccion">Localidad</string>
    <string name="provincia_direccion">Provincia</string>
    <string name="direccion_direccion">Dirección</string>
    <string name="codigoPostal_direccion">Código postal</string>
    <string name="titulo_modificar_direccion">Modificar datos dirección</string>
    <string name="textview_iniciar_sesion">Iniciar sesión</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login_nombre">Aarón Martín Jiménez</string>
    <string name="login_correo">martinjimenezaaron@gmail.com</string>
    <string name="menu_tipoCentroSanitario">Tipo_Centro_Sanitario</string>
    <string name="menu_tipoModalidadPaciente">Tipo_Modalidad_Paciente</string>
    <string name="menu_centroSanitario">Centro_Sanitario</string>
    <string name="menu_tipoRecursoComunitario">Tipo_Recurso_Comunitario</string>
    <string name="menu_recursoComunitario">Recurso_Comunitario</string>
    <string name="menu_insertar">Insertar</string>
    <string name="menu_modificar">Modificar</string>
    <string name="menu_listar">Listar</string>
    <string name="titulo_crearNuevoTipoCentroSanitario">Crear nuevo tipo centro sanitario</string>
    <string name="titulo_crearNuevoTipoModalidadPaciente">Crear nuevo tipo modalidad paciente</string>
    <string name="titulo_crearNuevoCentroSanitario">Crear nuevo centro sanitario</string>
    <string name="titulo_crearNuevoTipoRecursoComunitario">Crear nuevo tipo recurso comunitario</string>
    <string name="titulo_crearNuevoRecursoComunitario">Crear nuevo recurso comunitario</string>
    <string name="titulo_modificarDatosTipoCentroSanitario">Modificar datos tipo centro sanitario</string>
    <string name="titulo_modificarDatosTipoModalidadPaciente">Modificar datos tipo modalidad paciente</string>
    <string name="titulo_modificarDatosCentroSanitario">Modificar datos centro sanitario</string>
    <string name="titulo_modificarDatosTipoRecursoComunitario">Modificar datos tipo recurso comunitario</string>
    <string name="titulo_modificarDatosRecursoComunitario">Modificar datos recurso comunitario</string>
    <string name="titulo_listarDatosTipoCentroSanitario">Tipos de centros sanitarios</string>
    <string name="titulo_listarDatosTipoModalidadPaciente">Tipos de modalidades de pacientes</string>
    <string name="titulo_listarPacientes">Pacientes</string>
    <string name="titulo_listarDatosCentroSanitario">Centros sanitarios</string>
    <string name="titulo_listarDatosTipoRecursoComunitario">Tipos de recursos comunitarios</string>
    <string name="titulo_listarDatosRecursoComunitario">Recursos comunitarios</string>
    <string name="tipoCentroSanitario">Tipo de centro sanitario</string>
    <string name="tipoRecursoComunitario">Tipo de recurso comunitario</string>
    <string name="telefono">Teléfono</string>
    <string name="localidad">Localidad</string>
    <string name="provincia">Provincia</string>
    <string name="direccion">Dirección</string>
    <string name="codigoPostal">Código Postal</string>
    <string name="guardar">Guardar</string>
    <string name="volver">Volver</string>
    <string name="modificar">Modificar datos</string>
    <string name="visualizar">Visualizar datos</string>
    <string name="error_nombreVacio">El nombre es obligatorio.</string>
    <string name="error_telefonoVacio">El teléfono es obligatorio.</string>
    <string name="error_localidadVacio">La localidad es obligatoria.</string>
    <string name="error_provinciaVacio">La provincia es obligatoria.</string>
    <string name="error_direccionVacio">La dirección es obligatoria.</string>
    <string name="error_codigoPostalVacio">El código postal es obligatorio.</string>
    <string name="espacioEnBlanco"> </string>
    <string name="mensaje_insertar_tipo_centro_sanitario">Se ha insertado el tipo de centro sanitario satisfactoriamente.</string>
    <string name="mensaje_insertar_tipo_modalidad_paciente">Se ha insertado el tipo de modalidad paciente satisfactoriamente.</string>
    <string name="mensaje_insertar_centro_sanitario">Se ha insertado el centro sanitario satisfactoriamente.</string>
    <string name="mensaje_insertar_tipo_recurso_comunitario">Se ha insertado el tipo de recurso comunitario satisfactoriamente.</string>
    <string name="mensaje_insertar_recurso_comunitario">Se ha insertado el recurso comunitario satisfactoriamente.</string>
    <string name="menu_relacion_terminal_recurso_comunitario">Relación Terminal Recurso Comunitario</string>
    <string name="menu_terminal">Terminal</string>
    <string name="menu_paciente">Paciente</string>
    <string name="menu_relacion_paciente_persona">Relación Paciente Persona</string>
    <string name="menu_relacion_usuario_centro">Relación Usuario Centro</string>
    <string name="textview_password">Contraseña: </string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_volver">VOLVER</string>
    <string name="btn_guardar">GUARDAR</string>
</resources>