<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    tools:context=".ui.api.fragments.persona.InsertarPersonaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_insertar_personas"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_nombre_persona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHint="@color/black"
            app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
            tools:layout_editor_absoluteY="179dp" />

        <TextView
            android:id="@+id/textView_error_nombre_persona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/fondo_bordes_textviews"
            android:gravity="center"
            android:minHeight="35dp"
            android:visibility="gone"
            android:textColor="@color/black"
            android:text="@string/textview_nombre_obligatorio" />

        <EditText
            android:id="@+id/editText_apellidos_persona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/apellidos"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHint="@color/black"
            app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
            tools:layout_editor_absoluteY="179dp" />

        <TextView
            android:id="@+id/textView_error_apellidos_persona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/fondo_bordes_textviews"
            android:gravity="center"
            android:minHeight="35dp"
            android:visibility="gone"
            android:textColor="@color/black"
            android:text="@string/textview_apellidos_obligatorios" />

        <EditText
            android:id="@+id/editText_dni_persona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/dni_persona"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHint="@color/black"
            app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
            tools:layout_editor_absoluteY="179dp" />

        <TextView
            android:id="@+id/textView_error_dni_persona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/fondo_bordes_textviews"
            android:gravity="center"
            android:minHeight="35dp"
            android:visibility="gone"
            android:textColor="@color/black"
            android:text="@string/textview_dni_obligatorio" />

        <EditText
            android:id="@+id/editText_fechaNacimiento_persona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:ems="10"
            android:focusable="false"
            android:clickable="true"
            android:hint="@string/fechaNacimiento_persona"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHint="@color/black"
            app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
            tools:layout_editor_absoluteY="179dp" />

        <TextView
            android:id="@+id/textView_error_fechaNacimiento_persona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/fondo_bordes_textviews"
            android:gravity="center"
            android:minHeight="35dp"
            android:visibility="gone"
            android:textColor="@color/black"
            android:text="@string/textview_fechaNacimiento_obligatorio" />

        <Spinner
            android:id="@+id/spinner_sexo_persona"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:padding="10dp"
            android:spinnerMode="dialog"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/editText_telefonoFijo_persona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/telefonoFijo_persona"
            android:inputType="phone"
            android:padding="10dp"
            android:textColorHint="@color/black"
            app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
            tools:layout_editor_absoluteY="179dp" />

        <TextView
            android:id="@+id/textView_error_telefonoFijo_persona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/fondo_bordes_textviews"
            android:gravity="center"
            android:minHeight="35dp"
            android:visibility="gone"
            android:textColor="@color/black"
            android:text="@string/textview_telefonoFijo_obligatorio" />

        <EditText
            android:id="@+id/editText_telefonoMovil_persona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/telefonoMovil_persona"
            android:inputType="phone"
            android:padding="10dp"
            android:textColorHint="@color/black"
            app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
            tools:layout_editor_absoluteY="179dp" />

        <TextView
            android:id="@+id/textView_error_telefonoMovil_persona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/fondo_bordes_textviews"
            android:gravity="center"
            android:minHeight="35dp"
            android:visibility="gone"
            android:textColor="@color/black"
            android:text="@string/textview_telefonoMovil_obligatorio" />

        <Spinner
            android:id="@+id/spinner_direccion_persona"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:padding="10dp"
            android:spinnerMode="dialog"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="center|top"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_guardar_persona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/btn_guardar"
                android:textColor="#4CAF50" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="center|top"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_volver_persona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/btn_volver" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>